[gd_scene load_steps=9 format=3 uid="uid://chtnyvn6yavy7"]

[ext_resource type="Texture2D" uid="uid://cjtmlkllda42o" path="res://assets/textures/bg.png" id="1_asi7i"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_ul8qf"]
[ext_resource type="PackedScene" uid="uid://ceflppg0tkgl4" path="res://scenes/player.tscn" id="2_fmnb0"]
[ext_resource type="PackedScene" uid="uid://ccagyafn2hook" path="res://scenes/hud.tscn" id="2_ojnn6"]
[ext_resource type="PackedScene" uid="uid://cohqiu8tjwi4e" path="res://scenes/enemy_spawner.tscn" id="3_xqdor"]
[ext_resource type="AudioStream" uid="uid://ivd1efcx85cn" path="res://assets/audio/hit.wav" id="6_ounkw"]
[ext_resource type="AudioStream" uid="uid://dlgcja20icksn" path="res://assets/audio/explode.wav" id="7_pmowo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w27lo"]
size = Vector2(50, 720)

[node name="Game" type="Node2D"]
script = ExtResource("1_ul8qf")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_ojnn6")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_asi7i")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_fmnb0")]
position = Vector2(50, 360)
motion_mode = 1

[node name="Deathzone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(-200, 360)
shape = SubResource("RectangleShape2D_w27lo")

[node name="EnemySpawner" parent="." instance=ExtResource("3_xqdor")]

[node name="Enemies" type="Node" parent="."]

[node name="Rockets" type="Node" parent="." groups=["rocket_group"]]

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ounkw")

[node name="PlayerHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pmowo")

[connection signal="area_entered" from="Deathzone" to="." method="on_deathzone_area_entered"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="on_enemy_spawner_path_enemy_spawned"]
